--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 
 	// Test dependencies
 	testCompile group: 'org.testng', name: 'testng', version: '6.9.13.6'
+    testCompile group: 'commons-io', name: 'commons-io', version: '2.5'
 }
 
 
