feat(): correction du FieldSerializer

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 
 	// Test dependencies
 	testCompile group: 'org.testng', name: 'testng', version: '6.9.13.6'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.15.0'
     testCompile group: 'commons-io', name: 'commons-io', version: '2.5'
 }
 
