--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,20 @@ targetCompatibility = 1.7
 
 repositories {
 	jcenter()
+    mavenLocal()
 }
 
 dependencies {
+    compile group: 'fr.adbonnin.xtra', name: 'xtra', version: '1.0.0'
 	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.0'
 
 	// Test dependencies
 	testCompile group: 'org.testng', name: 'testng', version: '6.9.13.6'
+    testCompile group: 'pl.pragmatists', name: 'JUnitParams', version: '1.1.1'
+
+    testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+    testCompile 'cglib:cglib-nodep:3.2.6'
+    testCompile 'org.objenesis:objenesis:2.6'
 }
 
 
